test/corpus/comments.txt
=====================
Single line comment
=====================
// Hello this is a comment

---

(source_file (line_comment))

=====================
Multi line with code
=====================
/*
   f = {

   };
*/ 

---
(source_file (comment (block_comment)))
