test/corpus/control_structure.txt
==================
If-statements with no commas: if(expr) trueFunc falseFunc
==================
(
if(1<0.5){6+6+6}{666}
)
---
(source_file
 (code_block
  (function_call
   name: (identifier)
   receiver: (unnamed_argument
    (binary_expression
     left: (literal (number (integer)))
     right: (literal (number (float)))))
   arguments: (parameter_call_list
    (function_block
     (binary_expression
      left: (binary_expression
       left: (literal (number (integer)))
       right: (literal (number (integer))))
      right: (literal (number (integer)))))
    (function_block
     (literal (number (integer))))))))

;==================
;If-statements with double binary expressions
;==================
;(
;if(a.isKindOf(Stream) && a.class == Routine, {}, {});
;)
;---
;(source_file
;  (code_block
;    (control_structure
;      (if
;        expression: (binary_expression
;          left: (function_call
;            (receiver
;              (binary_expression
;                left: (function_call
;                  (receiver
;                    (variable
;                      (environment_var
;                        name: (identifier ))))
;                    name: (method_name )
;                    (parameter_call_list
;                      (argument_calls
;                        (unnamed_argument
;                          (class )))))
;                right: (variable
;                  (environment_var
;                    name: (identifier )))))
;                name: (method_name ))
;          right: (class ))
;        true: (function_block )
;        false: (function_block )))))

==================
function call in if expression
==================
if(nil.isNil, { "hello".postln });
---
(source_file
 (function_call
  name: (identifier)
  receiver: (unnamed_argument
   (function_call
    receiver: (variable (builtin_var))
    name: (identifier)))
  arguments: (parameter_call_list
   (unnamed_argument
    (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier)))))))
==================
if with one clause
==================
if(1 == 1, { "is true".postln; });
if(true, { "is true".postln; });
---
(source_file
 (function_call
  name: (identifier)
  receiver: (unnamed_argument
   (binary_expression
    left: (literal (number (integer)))
    right: (literal (number (integer)))))
  arguments: (parameter_call_list
   (unnamed_argument (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier))))))
 (function_call
  name: (identifier)
  receiver: (unnamed_argument
   (literal (bool)))
  arguments: (parameter_call_list
   (unnamed_argument (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier)))))))
==================
if with two clauses
==================
if(1 == 2, { "is true".postln; }, { 2; });
---
(source_file
 (function_call
  name: (identifier)
  receiver: (unnamed_argument (binary_expression
    left: (literal (number (integer)))
    right: (literal (number (integer)))))
  arguments: (parameter_call_list
   (unnamed_argument (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier))))
   (unnamed_argument (function_block
     (literal (number (integer))))))))
==================
expr.if with two clauses
==================
true.if({ "hello".postln; }, { "no".postln; });
---
(source_file
 (function_call
  receiver: (literal (bool))
  name: (identifier)
  arguments: (parameter_call_list
   (unnamed_argument (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier))))
   (unnamed_argument (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier)))))))

==================
expr.if with one clause
==================
true.if({ "hello".postln; });
---
(source_file
 (function_call
  receiver: (literal (bool))
  name: (identifier)
  arguments: (parameter_call_list
   (unnamed_argument (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier)))))))

;==================
;(expr).if with one clause
;==================
;(0 > 1).if({ "that can't be true!".postln; });
;---
;(source_file
; (function_call
;  (code_block ; shouldn't be here
;   (binary_expression
;    (literal
;     (number
;      (integer)))
;    (literal
;     (number
;      (integer)))))
;  (identifier)
;  (parameter_call_list
;   (unnamed_argument
;    (function_block
;     (function_call
;      (literal
;       (string))
;      (identifier)))))))
;
==================
while(func, func)
==================
while( {1 < 10}, { "still counting".println });
---
(source_file
 (function_call
  name: (identifier)
  receiver: (unnamed_argument (function_block
    (binary_expression
     left: (literal (number (integer)))
     right: (literal (number (integer))))))
  arguments: (parameter_call_list
   (unnamed_argument (function_block
     (function_call
      receiver: (literal (string))
      name: (identifier)))))))
==================
func.while{func}
==================
{1 < 10;}.while{
	"still counting".println;
};
---
(source_file
 (function_call
  receiver: (function_block
   (binary_expression
    left: (literal (number (integer)))
    right: (literal (number (integer)))))
  name: (identifier)
  arguments: (parameter_call_list
   (function_block
    (function_call
     receiver: (literal (string))
     name: (identifier))))))

==================
while {test} {body}
==================
while { false } { "never".postln };
---

(source_file
  (function_call
    name: (identifier)
    receiver: (function_block
      (literal (bool)))
    arguments: (parameter_call_list
      (function_block
        (function_call
          receiver: (literal (string))
          name: (identifier))))))

==================
for(start, end, func)
==================
for(1,10,{|i| i.postln});
---
(source_file
 (function_call
  name: (identifier)
  receiver: (unnamed_argument
   (literal (number (integer))))
  arguments: (parameter_call_list
   (unnamed_argument
    (literal (number (integer))))
   (unnamed_argument
    (function_block
     (parameter_list
      (argument name: (identifier)))
     (function_call
      receiver: (variable (environment_var name: (identifier)))
      name: (identifier)))))))

==================
start.for(end, func)
==================
1.for(10,{|i| i.postln});
---

(source_file
 (function_call
  receiver: (literal (number (integer)))
  name: (identifier)
  arguments: (parameter_call_list
   (unnamed_argument
    (literal (number (integer))))
   (unnamed_argument
    (function_block
     (parameter_list
      (argument name: (identifier)))
     (function_call
      receiver: (variable (environment_var name: (identifier)))
      name: (identifier)))))))

==================
start.forBy(end, step, func)
==================
1.forBy(2,10,{|i| i.postln});
---
(source_file
 (function_call
  receiver: (literal (number (integer)))
  name: (identifier)
  arguments: (parameter_call_list
   (unnamed_argument
    (literal (number (integer))))
   (unnamed_argument
    (literal (number (integer))))
   (unnamed_argument
    (function_block
     (parameter_list
      (argument name: (identifier)))
     (function_call
      receiver: (variable (environment_var name: (identifier)))
      name: (identifier)))))))

==================
forBy(start, end, step, func)
==================
forBy(2,10,2,{|i| i.postln});
---
(source_file
 (function_call
  name: (identifier)
  receiver: (unnamed_argument (literal (number (integer))))
  arguments: (parameter_call_list
   (unnamed_argument
    (literal (number (integer))))
   (unnamed_argument
    (literal (number (integer))))
   (unnamed_argument
    (function_block
     (parameter_list
      (argument name: (identifier)))
     (function_call
      receiver: (variable (environment_var name: (identifier)))
      name: (identifier)))))))

==================
case
==================
(
x = case
{ i == 1.5 } { \wrong }
{ true }   { \wrong }
{ i == 0 }   { \true };
)
---

(source_file (code_block
 (variable_definition
  name: (variable (environment_var name: (identifier)))
  value: (function_call
    name: (identifier)
    receiver: (function_block 
      (binary_expression
        left: (variable (environment_var name: (identifier)))
        right: (literal (number (float)))))
    arguments: (parameter_call_list
      (function_block (literal (symbol)))
      (function_block (literal (bool)))
      (function_block (literal (symbol)))
      (function_block (binary_expression 
        left: (variable (environment_var name: (identifier)))
        right: (literal (number (integer)))))
      (function_block (literal (symbol)))
    )))))

==================
simple switch with literal as test value
==================
(
switch(0,
	{1},   { \no },
	{0},   { \true });
)
---
(source_file (code_block
    (function_call
    name: (identifier)
    receiver: (unnamed_argument (literal (number (integer))))
    arguments: (parameter_call_list
      (unnamed_argument (function_block (literal (number (integer)))))
      (unnamed_argument (function_block (literal (symbol))))
      (unnamed_argument (function_block (literal (number (integer)))))
      (unnamed_argument (function_block (literal (symbol))))
    ))))
============
Weird kind of switch (no commas)
============
(
switch (201)
    {1}   { \no }
    {1.1} { \wrong }
    {2}   { \wrong }
    {0}   { \true };
)
---
(source_file (code_block
    (function_call
    name: (identifier)
    receiver: (unnamed_argument (literal (number (integer))))
    arguments: (parameter_call_list
      (function_block (literal (number (integer))))
      (function_block (literal (symbol)))
      (function_block (literal (number (float))))
      (function_block (literal (symbol)))
      (function_block (literal (number (integer))))
      (function_block (literal (symbol)))
      (function_block (literal (number (integer))))
      (function_block (literal (symbol)))
    ))))
